--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down" style="padding-right: 30px !important;">
-            <li><a href="home.html" style="height: 55px;"> Home</a></li>
+            <li><a href="index.html" style="height: 55px;"> Home</a></li>
             <li><a href="login.html" style="height: 55px;">Login</a></li>
             <li><a href="register.html"  style="height: 55px;">Signup</a></li>
             <li><a href="#" style="height: 55px;">Help</a></li>
@@ -29,7 +29,7 @@
           <div class="container center ">
           <ul class="sidenav bgblue" id="mobile-menu">
           
-            <li><a href="home.html" class="white-text">Home</a></li>
+            <li><a href="index.html" class="white-text">Home</a></li>
             <li><a href="login.html" class="white-text">Login</a></li>
             <li><a href="register.html" class="white-text">Signup</a></li>
             <li><a href="#" class="white-text">Help</a></li>
