--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet ipsum nisi laudantium, corrupti a nesciunt dignissimos quisquam consectetur quidem consequatur labore obcaecati, mollitia eos excepturi, cumque sapiente qui aliquam molestiae!</p>
             <p>Ready to start preperation?</p>
             <div class="center">
-                <a href="#signup" class="btn bgred">Get Started &nbsp; &nbsp;<i class="fa fa-angle-right"></i></a>
+                <a href="register.html" class="btn bgred">Get Started &nbsp; &nbsp;<i class="fa fa-angle-right"></i></a>
             </div>
         </div>
     </section>
