--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
     <div class="container center ">
         <h4 class="center">Login form</h4>
         <div class="z-depth-1 bgwhite row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid;">
-            <form class="col s12" method="post">
+            <form class="col s12" method="get" action="profile.html">
               <div class='row'>
                 <div class='col s12'>
                 </div>
