--- a/company.html
+++ b/company.html
@@ -14,6 +14,11 @@
   <!--header-->
   <section>
     <nav class="nav-wrapper bgblue">
+      <ul id='dropdown-practice-lap' class='dropdown-content bgblue '>
+        <li><a href="#!" class="colorwhite">Companies specific</a></li>
+        <li><a href="#!" class="colorwhite">Core subjects</a></li>
+        <li><a href="#!" class="colorwhite">Aptitude</a></li>
+      </ul>
     
       <a href="#" class="brand-logo " style="height: 55px; padding-left: 10px !important;">sitelogo</a>
       <a href="#" class="sidenav-trigger" data-target="mobile-menu">
@@ -22,16 +27,12 @@
       <ul class="right hide-on-med-and-down" style="padding-right: 30px !important;">
         <li><a href="#" style="height: 55px;">Dashboard</a></li>
         <li><a href="profile.html" style="height: 20px;">Profile</a></li>
-        <li><a href="#" style="height: 55px;" data-target='dropdown-practice' class="dropdown-trigger ">Practice <i class="fa fa-caret-down"></i></a></li>
-        <ul id='dropdown-practice' class='dropdown-content bgblue '>
-          <li><a href="#!" class="colorwhite">Companies specific</a></li>
-          <li><a href="#!" class="colorwhite">Core subjects</a></li>
-          <li><a href="#!" class="colorwhite">Aptitude</a></li>
-        </ul>
+        <li><a href="#"  style="height: 55px;"  data-target='dropdown-practice-lap' class="dropdown-trigger">Practice <i class="fa fa-caret-down"></i></a></li>
         <li><a href="#"  style="height: 55px;">Resources</a></li>
         <li><a href="#" style="height: 55px;">Help</a></li>
         <li><a href="#" style="height: 55px;">Logout <i class="fa fa-sign-out"></i></a></li>
       </ul>
+     
       <div class="container center ">
       <ul class="sidenav bgblue" id="mobile-menu">
         <li><a href="#" class="white-text">Dashboard</a></li>
