--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <title>Profile</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="stylesheet" href="/styles//css/main.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer" 
+    />
+    <script src="js/anim.js"></script>
 </head>
 <body>
-    <h4 class="title">Loading...</h4>
+    <div class="container">
+        <div id="text-placeholder"></div>
+        <div>
+            <div onclick="scatterText()" id="scatterElement">^</div>
+        </div>
+    </div>
 </body>
 </html>
